	Fixed bug where extra empty paragraphs would get deleted in WebKit/Blink due to recent Quriks fix.
	Fixed bug where the editor wouldn't work properly on IE 12 due to some required browser sniffing.
	Fixed bug where formatting shortcut keys where interfering with Mac OS X screenshot keys.
	Fixed bug where the caret wouldn't move to the next/previous line boundary on Cmd+Left/Right on Gecko.
Version 4.1.9 (2015-03-10)
	Fixed bug where indentation wouldn't work properly for non list elements.
	Fixed bug with image plugin not pulling the image dimensions out correctly if a custom document_base_url was used.
	Fixed bug where ctrl+alt+[1-9] would conflict with the AltGr+[1-9] on Windows. New shortcuts is ctrl+shift+[1-9].
	Fixed bug with removing formatting on nodes in inline mode would sometimes include nodes outside the editor body.
	Fixed bug where extra nbsp:s would be inserted when you replaced a word surronded by spaces using insertContent.
	Fixed bug with pasting from Google Docs would produce extra strong elements and line feeds.
Version 4.1.8 (2015-03-05)
	Added new html5 sizes attribute to img elements used together with srcset.
	Added new elementpath option that makes it possible to disable the element path but keep the statusbar.
	Added new option table_style_by_css for the table plugin to set table styling with css rather than table attributes.
	Added new link_assume_external_targets option to prompt the user to prepend http:// prefix if the supplied link does not contain a protocol prefix.
	Added new image_prepend_url option to allow a custom base path/url to be added to images.
	Added new table_appearance_options option to make it possible to disable some options.
	Added new image_title option to make it possible to alter the title of the image, disabled by default.
	Fixed bug where selection starting from out side of the body wouldn't produce a proper selection range on IE 11.